# ProjetSysteme

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  ProjetSysteme.desktop
assets/: CMakeLists.txt  assets.qrc
include/: Face.hpp  Maths.hpp  NormalCalculation.hpp  Object.hpp  SequentialNormalCalculation.hpp  Vector.hpp
include/benchmark/: Benchmark.hpp
include/gui/: Object.hpp
include/lib/: Face.hpp  Maths.hpp  NormalCalculation.hpp  Object.hpp  OpenMPNormalCalculation.hpp  PThreadNormalCalculation.hpp  Point.hpp  SequentialNormalCalculation.hpp  Vector.hpp  Vertex.hpp
include/tests/: TestNormalCalculation.hpp
qml/: main.qml  qml.qrc
shaders/: shaders.qrc
src/: CMakeLists.txt  Face.cpp  Maths.cpp  NormalCalculation.cpp  Object.cpp  Point.cpp  SequentialNormalCalculation.cpp  Vector.cpp  main.cpp
src/benchmark/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  Object.cpp  main.cpp
src/lib/: CMakeLists.txt  Face.cpp  Maths.cpp  NormalCalculation.cpp  Object.cpp  OpenMPNormalCalculation.cpp  PThreadNormalCalculation.cpp  Point.cpp  SequentialNormalCalculation.cpp  Vector.cpp  Vertex.cpp
src/tests/: CMakeLists.txt  TestNormalCalculation.cpp
